Add disclaimer about tool limitations and safety
Added a disclaimer section to inform users about the limitations of the tool and the importance of personal judgment when handling sensitive data.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
                 </button>
             </div>
 
+            <div class="disclaimer-box">
+                <p class="disclaimer-title">⚠️ Disclaimer:</p>
+                <p class="disclaimer-text">
+                    Tools ini membantu mengidentifikasi link berbahaya, tetapi tidak 100% akurat. 
+                    Selalu gunakan penilaian pribadi dan jangan pernah memasukkan data sensitif 
+                    (password, kartu kredit, dll) ke situs yang mencurigakan.
+                </p>
+            </div>
+
             <div class="loading" id="loading">
                 <div class="spinner"></div>
                 <p>Menganalisis URL...</p>
@@ -73,6 +82,10 @@
                     <div class="tip-compact">
                         <span>🛡️</span>
                         <p>Jangan klik link dari sumber tidak dikenal</p>
+                    </div>
+                    <div class="tip-compact">
+                        <span>🧐</span>
+                        <p>Cek interface dengan webscanner</p>
                     </div>
                 </div>
             </div>
