--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             
             <div class="accuracy-badge">
                 <span class="badge-icon">🎯</span>
-                <span class="badge-text">99% Accuracy Powered by AI & 6+ Security APIs</span>
+                <span class="badge-text">80% Accuracy Powered by AI & 6+ Security APIs</span>
             </div>
         </div>
 
@@ -67,9 +67,8 @@
             <div class="disclaimer-box">
                 <p class="disclaimer-title">⚠️ Important Notice:</p>
                 <p class="disclaimer-text">
-                    This tool provides advanced phishing detection using multiple security APIs and AI algorithms. 
-                    While we achieve 99% accuracy, no tool is 100% perfect. Always exercise caution and never 
-                    enter sensitive information on suspicious websites.
+              Alat ini menyediakan deteksi phishing tingkat lanjut menggunakan berbagai API keamanan dan algoritma AI.
+Meskipun akurasi kami mencapai 80%, tidak ada alat yang 100% sempurna. Selalu berhati-hati dan jangan pernah memasukkan informasi sensitif di situs web yang mencurigakan.
                 </p>
             </div>
 
@@ -113,7 +112,7 @@
                         <div class="feature-icon">🤖</div>
                         <div class="feature-content">
                             <h4>AI-Powered Analysis</h4>
-                            <p>Machine learning algorithms detect sophisticated phishing patterns with 99% accuracy</p>
+                            <p>Machine learning algorithms detect sophisticated phishing patterns with 80% accuracy</p>
                         </div>
                     </div>
                     <div class="feature">
@@ -180,7 +179,7 @@
             <h3>📈 Detection Statistics</h3>
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="stat-number">99%</div>
+                    <div class="stat-number">80%</div>
                     <div class="stat-label">Accuracy Rate</div>
                 </div>
                 <div class="stat-card">
@@ -188,7 +187,7 @@
                     <div class="stat-label">Security APIs</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number"><5s</div>
+                    <div class="stat-number"><5s></div>
                     <div class="stat-label">Analysis Time</div>
                 </div>
                 <div class="stat-card">
