--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             
             <div class="accuracy-badge">
                 <span class="badge-icon">🎯</span>
-                <span class="badge-text">80% Accuracy Powered by AI & 6+ Security APIs</span>
+                <span class="badge-text">80% Accuracy Powered 6+ Security APIs</span>
             </div>
         </div>
 
