--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Meskipun akurasi kami mencapai 80%, tidak ada alat yang 100% sempurna. Selalu be
                     Made with ❤️ by <strong>Hafourenai</strong>
                 </p>
                 <p class="footer-sub">
-                    Powered by ulti-API Security Platform
+                    Powered by Multi-API Security Platform
                 </p>
                 <div class="footer-apis">
                     <span class="api-badge">VirusTotal</span>
