--- a/index.html
+++ b/index.html
@@ -186,8 +186,9 @@
         <!-- Footer -->
         <footer class="footer-card">
             <p>
-                <strong>⚠️ Important Notice:</strong><br>
-                Alat ini menyediakan deteksi phishing tingkat lanjut menggunakan berbagai API keamanan dan algoritma AI. Meskipun akurasi kami mencapai 80%, tidak ada alat yang 100% sempurna. Selalu berhati-hati dan jangan pernah memasukkan informasi sensitif di situs web yang mencurigakan.
+                <strong>⚠️ Important Notice</strong><br>
+                Alat ini menyediakan deteksi phishing tingkat lanjut menggunakan berbagai API keamanan dan Integrasi Machine Learning. Deteksi bisa saja salah.
+                Tidak ada alat yang 100% sempurna. Selalu berhati-hati dan jangan pernah memasukkan informasi sensitif di situs web yang mencurigakan.
             </p>
         </footer>
     </div>
