--- a/index.html
+++ b/index.html
@@ -131,10 +131,40 @@
                     <div class="api-status-list">
                         <div class="api-status-item">
                             <div class="api-info">
-                                <span class="api-name">Virus Total </span>
-                                <span class="api-provider">Virustotal APIKey</span>
+                                <span class="api-name">Virus Total</span>
+                                <span class="api-provider">Security Engine</span>
                             </div>
-                            <div class="api-status" id="mlStatus">
+                            <div class="api-status" id="vtStatus">
+                                <span class="badge">CLEAN</span>
+                                <i data-lucide="check-circle" class="check-icon"></i>
+                            </div>
+                        </div>
+                        <div class="api-status-item">
+                            <div class="api-info">
+                                <span class="api-name">Safe Browsing</span>
+                                <span class="api-provider">Google Security</span>
+                            </div>
+                            <div class="api-status" id="sbStatus">
+                                <span class="badge">CLEAN</span>
+                                <i data-lucide="check-circle" class="check-icon"></i>
+                            </div>
+                        </div>
+                        <div class="api-status-item">
+                            <div class="api-info">
+                                <span class="api-name">IP Quality Score</span>
+                                <span class="api-provider">Fraud Detection</span>
+                            </div>
+                            <div class="api-status" id="ipqStatus">
+                                <span class="badge">CLEAN</span>
+                                <i data-lucide="check-circle" class="check-icon"></i>
+                            </div>
+                        </div>
+                        <div class="api-status-item">
+                            <div class="api-info">
+                                <span class="api-name">Telegram Bot</span>
+                                <span class="api-provider">Bot Analysis</span>
+                            </div>
+                            <div class="api-status" id="tgStatus">
                                 <span class="badge">CLEAN</span>
                                 <i data-lucide="check-circle" class="check-icon"></i>
                             </div>
